--- a/exo7/css/global.css
+++ b/exo7/css/global.css
@@ -1,48 +1,56 @@
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 .container {
-    width: 100%;
-    margin: 0 auto;
-    padding: 0 12px;
-    max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 12px;
+  max-width: 1200px;
 }
 
 body {
-    line-height: 1.618;
-    font-size: calc(1.2rem + 0.6vmin);
+  line-height: 1.618;
+  font-size: calc(1.2rem + 0.6vmin);
 }
 
-.adaptative-img {
-    position: relative;
+*[class*="adaptative-img"] {
+  position: relative;
 }
 
-.adaptative-img > img {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
+*[class*="adaptative-img"] > img {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.adaptative-img__cover > img {
+  object-fit: cover;
+}
+
+.adaptative-img__contain > img {
+  object-fit: contain;
 }
 
 img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 ul li {
-    list-style: none;
+  list-style: none;
 }
 
 h1,
 h2,
 h3,
 p {
-    
+  margin: 0;
 }
