--- a/exo8/css/footer.css
+++ b/exo8/css/footer.css
@@ -1,8 +1,8 @@
 .footer {
   background-color: var(--green);
-  position: fixed;
+  /* position: fixed;
   bottom: 0px;
-  width: 100%;
+  width: 100%; */
 }
 
 .footer__list {
