--- a/exo8/css/global.css
+++ b/exo8/css/global.css
@@ -1,5 +1,8 @@
 html {
   font-size: 62.5%;
+  display: flex;
+  min-height: 100%;
+  flex-direction: column;
 }
 
 .container {
@@ -10,6 +13,9 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  flex: 1 0;
   line-height: 1.618;
   font-size: calc(1.2rem + 0.6vmin);
 }
