--- a/exo8/css/header.css
+++ b/exo8/css/header.css
@@ -6,6 +6,7 @@ header {
   --header-padding: 8px;
   --header-gap: 25px;
   display: flex;
+    min-height: 50px;
 }
 
 .header__logo {
@@ -15,6 +16,8 @@ header {
 }
 
 .header__logo img {
+  min-height: 50px;
+  min-width: 55px;
   padding: var(--header-padding);
 }
 
@@ -24,10 +27,12 @@ header {
   padding-left: 30px;
 }
 
-.header__nav__left__list li {
-  flex: 1 0;
+.header__nav__left__list li a {
+  flex: 2 0;
   color: var(--white);
   padding: var(--header-padding);
+  text-decoration: none;
+  white-space: nowrap;
 }
 
 .header__nav__left {
@@ -43,9 +48,24 @@ header {
   padding-right: 30px;
 }
 
-.header__nav__right__list li {
+.header__nav__right__list li a {
+  display: flex;
+  flex: 1 0;
   color: var(--white);
   padding: var(--header-padding);
+  text-decoration: none;
+  white-space: nowrap;
+}
+
+.header__nav__right__list li {
+  display: flex;
+  flex: 1 0;
+  align-items: center;
+}
+
+.header__nav__right__list li img {
+  min-width: 20px;
+    min-height: 20px;
 }
 
 .header__nav__right {
