--- a/exo8/css/footer.css
+++ b/exo8/css/footer.css
@@ -1,5 +1,6 @@
 .footer {
   background-color: var(--green);
+  min-height: 68px;
   /* position: fixed;
   bottom: 0px;
   width: 100%; */
@@ -13,8 +14,28 @@
 .footer__list a {
   color: var(--white);
   text-decoration: none;
+  position: relative;
 }
 
 .footer__list li {
   padding: 15px;
 }
+
+.footer__list a:before {
+  left: -4px;
+  content: "";
+  width: 0;
+  height: 3px;
+  bottom: -6px;
+  position: absolute;
+  border-radius: 50px;
+  background: var(--white);
+  box-shadow: var(--text-shadow);
+  transition: all 700ms;
+    transition-delay: 0.5s;
+}
+
+.footer__list a:hover:before {
+  width: calc(100% + 8px);
+}
+
