--- a/exo9/sass/_header.scss
+++ b/exo9/sass/_header.scss
@@ -4,10 +4,6 @@
 
   @media only screen and (max-width: 1110px) {
     display: none;
-
-    // aside {
-    //   display: none;
-    // }
   }
 }
 
@@ -123,6 +119,7 @@
     display: flex;
     padding-bottom: 8px;
     max-width: calc(76rem + 0.6vmin);
+    min-width: 440px;
     font-family: var(--primary-font);
     font-size: 20px;
   }
@@ -130,6 +127,7 @@
     color: var(--primary-color);
     display: flex;
     max-width: calc(57rem + 0.6vmin);
+    min-width: 440px;
     line-height: 55px;
     font-size: 48px;
     font-family: var(--primary-font);
@@ -137,6 +135,7 @@
 
   @media only screen and (max-width: 780px) {
     background-size: 0;
+    align-items: center;
   }
 
   display: flex;
@@ -148,17 +147,5 @@
   height: calc(37rem + 0.6vmin);
   border-radius: 20px;
   padding: 45px 50px;
+  margin-bottom: 50px;
 }
-
-// aside {
-//   display: flex;
-//   justify-content: flex-end;
-// }
-
-// .button {
-//   text-decoration: none;
-//   color: var(--primary-color);
-//   background-color: aqua;
-//   padding: 10px 30px 10px 30px;
-//   border-radius: 5px;
-// }
