--- a/exo9/sass/_main.scss
+++ b/exo9/sass/_main.scss
@@ -1,7 +1,7 @@
 .main__numbers {
   display: flex;
   justify-content: space-between;
-  padding: 18px;
+  padding: 18px 18px 50px 18px;
 
   &__1,
   &__2,
@@ -34,6 +34,7 @@
 
   @media only screen and (max-width: 780px) {
     flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -54,11 +55,46 @@
       padding: 20px;
       margin: 18px;
       border-radius: 10px;
+      font-family: var(--primary-font);
     }
+
+    &__1 {
+      background-color: var(--third-color);
+    }
+
+    &__3 {
+      background-color: var(--third-color);
+    }
+
     &__main {
+      &__2 {
+        span {
+          font-size: 80px;
+          font-weight: 700;
+          // padding-left: 20px;
+        }
+
+        p {
+          font-size: 24px;
+          font-weight: 500;
+          display: flex;
+          align-items: center;
+        }
+        display: flex;
+        flex: 1 0;
+        justify-content: space-evenly;
+      }
+
       span {
         font-size: 80px;
         font-weight: 700;
+        padding-left: 20px;
+      }
+
+      p {
+        font-size: 24px;
+        font-weight: 500;
+        padding-left: 20px;
       }
 
       display: flex;
@@ -69,9 +105,268 @@
     div {
       display: flex;
       flex: 1 0;
-      background-color: var(--third-color);
+      justify-content: space-evenly;
     }
+
+    &__2 {
+      button {
+        &:hover {
+          background: hsla(0, 0%, 100%, 0.2);
+          transition: var(--primary-transition);
+          cursor: pointer;
+        }
+        text-decoration: none;
+        color: var(--primary-color);
+        background-color: var(--four-color);
+        border: none;
+        padding: 10px 30px 10px 30px;
+        margin-top: 34px;
+        border-radius: 8px;
+        width: 300px;
+        align-self: center;
+      }
+      background: var(--rainbow-color);
+    }
+
+    &__secondary {
+      color: var(--secondary-color);
+      font-size: 14px;
+      font-weight: 400;
+      display: flex;
+      padding-left: 68px;
+
+      a {
+        &:hover {
+          background: hsla(0, 0%, 100%, 0.2);
+          transition: var(--primary-transition);
+        }
+        background-color: hsla(0, 0%, 100%, 0.12);
+        height: 48px;
+        width: 48px;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      img {
+        height: 20px;
+        width: 20px;
+      }
+    }
+
     display: flex;
     color: var(--primary-color);
+    padding-bottom: 50px;
+
+    @media only screen and (max-width: 1070px) {
+      flex-direction: column;
+    }
+  }
+}
+
+.main__products {
+  &__blocks {
+    div {
+      img {
+        min-width: 200px;
+        min-height: 40px;
+      }
+      p {
+        color: var(--secondary-color);
+      }
+
+      a {
+        &:after {
+          content: "";
+          display: flex;
+          background-image: url(https://venom.network/static/media/arrow-long.4e8ca125f1780b2fd248.svg);
+          height: 24px;
+          width: 24px;
+        }
+        &:hover {
+          color: var(--secondary-color);
+          transition: var(--primary-transition);
+        }
+
+        text-decoration: none;
+        font-weight: 500;
+        color: var(--primary-color);
+        display: flex;
+        gap: 8px;
+      }
+
+      display: flex;
+      flex-direction: column;
+      background-color: var(--third-color);
+      border-radius: 8px;
+      padding: 20px 10px;
+      flex: 1 0;
+    }
+
+    display: flex;
+    flex: 1 0;
+    flex-wrap: wrap;
+    margin: 18px;
+    gap: 18px;
+    justify-content: space-evenly;
+  }
+
+  h1 {
+    color: var(--primary-color);
+    font-family: var(--primary-font);
+    margin-top: 25px;
+    font-weight: 100;
+  }
+}
+
+.main__about {
+  &__card {
+    display: flex;
+    background: var(--rainbow-color);
+    border-radius: 8px;
+    margin: 16px;
+
+    @media only screen and (max-width: 980px) {
+      flex-direction: column;
+    }
+  }
+
+  &__left {
+    display: flex;
+    flex: 1 0;
+  }
+  &__right {
+    p {
+      font-weight: 500;
+      font-size: 16px;
+    }
+    display: flex;
+    flex-direction: column;
+    flex: 1 0;
+    gap: 18px;
+    color: var(--primary-color);
+    padding: 50px;
+  }
+  &__footer {
+    button {
+      &:hover {
+        background: hsla(0, 0%, 100%, 0.2);
+        transition: var(--primary-transition);
+        cursor: pointer;
+      }
+      text-decoration: none;
+      color: var(--primary-color);
+      background-color: var(--four-color);
+      border: none;
+      padding: 10px 30px 10px 30px;
+      margin-top: 34px;
+      border-radius: 8px;
+      width: 200px;
+      align-self: center;
+
+      @media only screen and (max-width: 980px) {
+        width: 300px;
+        height: 80px;
+      }
+    }
+    display: flex;
+    gap: 20px;
+    margin-top: 38px;
+
+    @media only screen and (max-width: 980px) {
+      justify-content: center;
+    }
+  }
+  img {
+    padding: 50px;
+    object-fit: contain;
+  }
+  h1 {
+    color: var(--primary-color);
+    font-family: var(--primary-font);
+    margin-top: 25px;
+    font-weight: 100;
+  }
+  margin-bottom: 100px;
+}
+
+.main__subscribe {
+  &__blocks {
+    &__info {
+      h3 {
+        font-weight: 400;
+      }
+      p {
+        color: var(--secondary-color);
+      }
+      color: var(--primary-color);
+      display: flex;
+      flex-direction: column;
+      flex: 4 0;
+    }
+
+    &__img {
+      max-width: 64px;
+      max-height: 64px;
+      display: flex;
+      flex: 1 0;
+    }
+    display: flex;
+    flex: 2 0;
+    gap: 8px;
+    padding: 20px;
+    width: 100%;
+  }
+
+  &__form {
+    input {
+      display: flex;
+      flex: 3 0;
+      background: var(--four-color);
+      color: var(--primary-color);
+      font-size: large;
+      border: none;
+      border-radius: 5px;
+      width: 100%;
+      height: 38px;
+      padding: 12px;
+
+      @media only screen and (max-width: 1000px) {
+        margin-left: 24px;
+      }
+    }
+    button {
+      &:hover {
+        opacity: 1;
+        transition: var(--primary-transition);
+      }
+      display: flex;
+      flex: 1 0;
+      opacity: 0.85;
+      font-size: 16px;
+      color: var(--primary-color);
+      background: var(--rainbow-color);
+      border-radius: 8px;
+      padding: 8px;
+      border: none;
+      justify-content: center;
+    }
+    display: flex;
+    align-items: center;
+    flex: 1 0;
+    padding: 0 18px 0 0;
+    gap: 8px;
+    width: 100%;
+  }
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--third-color);
+  padding: 10px;
+  border-radius: 8px;
+  margin-bottom: 100px;
+
+  @media only screen and (max-width: 1000px) {
+    flex-direction: column;
   }
 }
