--- a/exo9/sass/index.css
+++ b/exo9/sass/index.css
@@ -251,6 +251,11 @@ body {
   position: absolute;
 }
 
+.adaptative-img__cover > img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .adaptative-img__contain > img {
   -o-object-fit: contain;
      object-fit: contain;
@@ -281,6 +286,7 @@ p {
   --primary-color: white;
   --secondary-color: lightgrey;
   --third-color: #181a1f;
+  --four-color: hsla(0, 0%, 100%, 0.1);
   --primary-font: "Inter", sans-serif;
   --primary-transition: all 0.3s ease;
   --rainbow-color: linear-gradient(97.88deg, #11a97d, #6610f2 119.44%);
@@ -400,6 +406,7 @@ p {
   height: calc(37rem + 0.6vmin);
   border-radius: 20px;
   padding: 45px 50px;
+  margin-bottom: 50px;
 }
 .bg__img img {
   width: 100px;
@@ -411,6 +418,7 @@ p {
   display: flex;
   padding-bottom: 8px;
   max-width: calc(76rem + 0.6vmin);
+  min-width: 440px;
   font-family: var(--primary-font);
   font-size: 20px;
 }
@@ -418,6 +426,7 @@ p {
   color: var(--primary-color);
   display: flex;
   max-width: calc(57rem + 0.6vmin);
+  min-width: 440px;
   line-height: 55px;
   font-size: 48px;
   font-family: var(--primary-font);
@@ -425,13 +434,14 @@ p {
 @media only screen and (max-width: 780px) {
   .bg__img {
     background-size: 0;
+    align-items: center;
   }
 }
 
 .main__numbers {
   display: flex;
   justify-content: space-between;
-  padding: 18px;
+  padding: 18px 18px 50px 18px;
   color: var(--primary-color);
 }
 .main__numbers__1 div, .main__numbers__2 div, .main__numbers__3 div {
@@ -459,6 +469,7 @@ p {
 @media only screen and (max-width: 780px) {
   .main__numbers {
     flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -471,6 +482,7 @@ p {
 .main__how__blocks {
   display: flex;
   color: var(--primary-color);
+  padding-bottom: 50px;
 }
 .main__how__blocks__1, .main__how__blocks__2, .main__how__blocks__3 {
   display: flex;
@@ -478,20 +490,344 @@ p {
   padding: 20px;
   margin: 18px;
   border-radius: 10px;
+  font-family: var(--primary-font);
+}
+.main__how__blocks__1 {
+  background-color: var(--third-color);
+}
+.main__how__blocks__3 {
+  background-color: var(--third-color);
 }
 .main__how__blocks__main {
   display: flex;
   flex: 1 0;
   align-items: center;
 }
+.main__how__blocks__main__2 {
+  display: flex;
+  flex: 1 0;
+  justify-content: space-evenly;
+}
+.main__how__blocks__main__2 span {
+  font-size: 80px;
+  font-weight: 700;
+}
+.main__how__blocks__main__2 p {
+  font-size: 24px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+}
 .main__how__blocks__main span {
   font-size: 80px;
   font-weight: 700;
+  padding-left: 20px;
+}
+.main__how__blocks__main p {
+  font-size: 24px;
+  font-weight: 500;
+  padding-left: 20px;
 }
 .main__how__blocks div {
   display: flex;
   flex: 1 0;
+  justify-content: space-evenly;
+}
+.main__how__blocks__2 {
+  background: var(--rainbow-color);
+}
+.main__how__blocks__2 button {
+  text-decoration: none;
+  color: var(--primary-color);
+  background-color: var(--four-color);
+  border: none;
+  padding: 10px 30px 10px 30px;
+  margin-top: 34px;
+  border-radius: 8px;
+  width: 300px;
+  align-self: center;
+}
+.main__how__blocks__2 button:hover {
+  background: hsla(0, 0%, 100%, 0.2);
+  transition: var(--primary-transition);
+  cursor: pointer;
+}
+.main__how__blocks__secondary {
+  color: var(--secondary-color);
+  font-size: 14px;
+  font-weight: 400;
+  display: flex;
+  padding-left: 68px;
+}
+.main__how__blocks__secondary a {
+  background-color: hsla(0, 0%, 100%, 0.12);
+  height: 48px;
+  width: 48px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main__how__blocks__secondary a:hover {
+  background: hsla(0, 0%, 100%, 0.2);
+  transition: var(--primary-transition);
+}
+.main__how__blocks__secondary img {
+  height: 20px;
+  width: 20px;
+}
+@media only screen and (max-width: 1070px) {
+  .main__how__blocks {
+    flex-direction: column;
+  }
+}
+
+.main__products__blocks {
+  display: flex;
+  flex: 1 0;
+  flex-wrap: wrap;
+  margin: 18px;
+  gap: 18px;
+  justify-content: space-evenly;
+}
+.main__products__blocks div {
+  display: flex;
+  flex-direction: column;
   background-color: var(--third-color);
+  border-radius: 8px;
+  padding: 20px 10px;
+  flex: 1 0;
+}
+.main__products__blocks div img {
+  min-width: 200px;
+  min-height: 40px;
+}
+.main__products__blocks div p {
+  color: var(--secondary-color);
+}
+.main__products__blocks div a {
+  text-decoration: none;
+  font-weight: 500;
+  color: var(--primary-color);
+  display: flex;
+  gap: 8px;
+}
+.main__products__blocks div a:after {
+  content: "";
+  display: flex;
+  background-image: url(https://venom.network/static/media/arrow-long.4e8ca125f1780b2fd248.svg);
+  height: 24px;
+  width: 24px;
+}
+.main__products__blocks div a:hover {
+  color: var(--secondary-color);
+  transition: var(--primary-transition);
+}
+.main__products h1 {
+  color: var(--primary-color);
+  font-family: var(--primary-font);
+  margin-top: 25px;
+  font-weight: 100;
+}
+
+.main__about {
+  margin-bottom: 100px;
+}
+.main__about__card {
+  display: flex;
+  background: var(--rainbow-color);
+  border-radius: 8px;
+  margin: 16px;
+}
+@media only screen and (max-width: 980px) {
+  .main__about__card {
+    flex-direction: column;
+  }
+}
+.main__about__left {
+  display: flex;
+  flex: 1 0;
+}
+.main__about__right {
+  display: flex;
+  flex-direction: column;
+  flex: 1 0;
+  gap: 18px;
+  color: var(--primary-color);
+  padding: 50px;
+}
+.main__about__right p {
+  font-weight: 500;
+  font-size: 16px;
+}
+.main__about__footer {
+  display: flex;
+  gap: 20px;
+  margin-top: 38px;
+}
+.main__about__footer button {
+  text-decoration: none;
+  color: var(--primary-color);
+  background-color: var(--four-color);
+  border: none;
+  padding: 10px 30px 10px 30px;
+  margin-top: 34px;
+  border-radius: 8px;
+  width: 200px;
+  align-self: center;
+}
+.main__about__footer button:hover {
+  background: hsla(0, 0%, 100%, 0.2);
+  transition: var(--primary-transition);
+  cursor: pointer;
+}
+@media only screen and (max-width: 980px) {
+  .main__about__footer button {
+    width: 300px;
+    height: 80px;
+  }
+}
+@media only screen and (max-width: 980px) {
+  .main__about__footer {
+    justify-content: center;
+  }
+}
+.main__about img {
+  padding: 50px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.main__about h1 {
+  color: var(--primary-color);
+  font-family: var(--primary-font);
+  margin-top: 25px;
+  font-weight: 100;
+}
+
+.main__subscribe {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--third-color);
+  padding: 10px;
+  border-radius: 8px;
+  margin-bottom: 100px;
+}
+.main__subscribe__blocks {
+  display: flex;
+  flex: 2 0;
+  gap: 8px;
+  padding: 20px;
+  width: 100%;
+}
+.main__subscribe__blocks__info {
+  color: var(--primary-color);
+  display: flex;
+  flex-direction: column;
+  flex: 4 0;
+}
+.main__subscribe__blocks__info h3 {
+  font-weight: 400;
+}
+.main__subscribe__blocks__info p {
+  color: var(--secondary-color);
+}
+.main__subscribe__blocks__img {
+  max-width: 64px;
+  max-height: 64px;
+  display: flex;
+  flex: 1 0;
+}
+.main__subscribe__form {
+  display: flex;
+  align-items: center;
+  flex: 1 0;
+  padding: 0 18px 0 0;
+  gap: 8px;
+  width: 100%;
+}
+.main__subscribe__form input {
+  display: flex;
+  flex: 3 0;
+  background: var(--four-color);
+  color: var(--primary-color);
+  font-size: large;
+  border: none;
+  border-radius: 5px;
+  width: 100%;
+  height: 38px;
+  padding: 12px;
+}
+@media only screen and (max-width: 1000px) {
+  .main__subscribe__form input {
+    margin-left: 24px;
+  }
+}
+.main__subscribe__form button {
+  display: flex;
+  flex: 1 0;
+  opacity: 0.85;
+  font-size: 16px;
+  color: var(--primary-color);
+  background: var(--rainbow-color);
+  border-radius: 8px;
+  padding: 8px;
+  border: none;
+  justify-content: center;
+}
+.main__subscribe__form button:hover {
+  opacity: 1;
+  transition: var(--primary-transition);
+}
+@media only screen and (max-width: 1000px) {
+  .main__subscribe {
+    flex-direction: column;
+  }
+}
+
+.footer__links__list {
+  display: flex;
+  flex: 1 0;
+  gap: 18px;
+}
+.footer__links__list__arrow a::after {
+  content: url(../assets/nav__arrow.svg);
+  transform: rotate(-45deg);
+}
+.footer__links a {
+  text-decoration: none;
+  font-family: var(--primary-font);
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--primary-color);
+  display: flex;
+}
+.footer__links a:hover {
+  color: var(--secondary-color);
+  transition: var(--primary-transition);
+}
+
+.footer__rights {
+  display: flex;
+  padding: 16px 0;
+}
+.footer__rights span {
+  color: var(--secondary-color);
+  flex: 1 0;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+}
+.footer__rights a {
+  color: var(--secondary-color);
+  text-decoration: none;
+  display: flex;
+  justify-content: flex-end;
+  padding: 16px;
+  font-size: 14px;
+}
+.footer__rights a:hover {
+  color: var(--primary-color);
+  transition: var(--primary-transition);
 }
 
 body {
