--- a/exo9/sass/_footer.scss
+++ b/exo9/sass/_footer.scss
@@ -44,7 +44,17 @@
     justify-content: flex-end;
     padding: 16px;
     font-size: 14px;
+
+    @media only screen and (max-width: 1000px) {
+      display: contents;
+      padding: 16px;
+    }
   }
   display: flex;
   padding: 16px 0;
+
+  @media only screen and (max-width: 1000px) {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
 }
