--- a/Entrainement/exo1/sass/_global.scss
+++ b/Entrainement/exo1/sass/_global.scss
@@ -18,6 +18,7 @@ body {
   flex: 1 0;
   line-height: 1.618;
   font-size: calc(1.2rem + 0.6vmin);
+  -webkit-font-smoothing: antialiased;
 }
 
 *[class*="adaptative-img"] {
